; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/lsm1/extr_lsm_ckpt.c_lsmCheckpointId.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/lsm1/extr_lsm_ckpt.c_lsmCheckpointId.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CKPT_HDR_ID_MSW = common dso_local global i32 0, align 4
@CKPT_HDR_ID_LSW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lsmCheckpointId(i64* %0, i32 %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i64* %0, i64** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %29

9:                                                ; preds = %2
  %10 = load i64*, i64** %3, align 8
  %11 = bitcast i64* %10 to i32*
  store i32* %11, i32** %6, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = load i32, i32* @CKPT_HDR_ID_MSW, align 4
  %14 = mul nsw i32 %13, 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %12, i64 %15
  %17 = call i64 @lsmGetU32(i32* %16)
  %18 = trunc i64 %17 to i32
  %19 = shl i32 %18, 32
  store i32 %19, i32* %5, align 4
  %20 = load i32*, i32** %6, align 8
  %21 = load i32, i32* @CKPT_HDR_ID_LSW, align 4
  %22 = mul nsw i32 %21, 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32, i32* %20, i64 %23
  %25 = call i64 @lsmGetU32(i32* %24)
  %26 = trunc i64 %25 to i32
  %27 = load i32, i32* %5, align 4
  %28 = add nsw i32 %27, %26
  store i32 %28, i32* %5, align 4
  br label %44

29:                                               ; preds = %2
  %30 = load i64*, i64** %3, align 8
  %31 = load i32, i32* @CKPT_HDR_ID_MSW, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds i64, i64* %30, i64 %32
  %34 = load i64, i64* %33, align 8
  %35 = trunc i64 %34 to i32
  %36 = shl i32 %35, 32
  %37 = load i64*, i64** %3, align 8
  %38 = load i32, i32* @CKPT_HDR_ID_LSW, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds i64, i64* %37, i64 %39
  %41 = load i64, i64* %40, align 8
  %42 = trunc i64 %41 to i32
  %43 = add nsw i32 %36, %42
  store i32 %43, i32* %5, align 4
  br label %44

44:                                               ; preds = %29, %9
  %45 = load i32, i32* %5, align 4
  ret i32 %45
}

declare dso_local i64 @lsmGetU32(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
